--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,27 @@
-# This file stores configurations for your Shopify app.
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
+client_id = "a4acd7fd56cec4056613bae71bba3573"
+name = "extension-react"
+application_url = "https://investing-nested-mainstream-rounds.trycloudflare.com"
+embedded = true
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "dsv-test-store.myshopify.com"
+
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
+
+[auth]
+redirect_urls = [
+  "https://investing-nested-mainstream-rounds.trycloudflare.com/auth/callback",
+  "https://investing-nested-mainstream-rounds.trycloudflare.com/auth/shopify/callback",
+  "https://investing-nested-mainstream-rounds.trycloudflare.com/api/auth/callback"
+]
+
+[webhooks]
+api_version = "2024-07"
+
+[pos]
+embedded = false
